--- a/README.mediawiki
+++ b/README.mediawiki
@@ -4,6 +4,9 @@ Jarvis was inspired by works of [http://worrydream.com/ Bret Victor], especially
 The central idea is that the feedback loop when you are coding should be the shortest possible, so you can see the effect of your code changes instantly, or almost.
 Jarvis implements a (small) subset of these ideas.
 
+== Demo Video == 
+You can find a demo at [http://madlag.github.com/jarvis/ ]
+
 == What is Jarvis ==
 
 Jarvis is a Python programming companion. Point it to a python function, and it will execute it.
